--- a/message_from_Ceo.html
+++ b/message_from_Ceo.html
@@ -280,10 +280,10 @@
     <!-- Desktop Navigation -->
     <nav id="desktop-nav">
       <ul>
-        <li><a href="../overview.html">会社概要</a></li>
-        <li><a href="../business_content.html">事業内容</a></li>
+        <li><a href="overview.html">会社概要</a></li>
+        <li><a href="business_content.html">事業内容</a></li>
         <li><a href="message_from_ceo.html">代表挨拶</a></li>
-        <li><a href="../contact_us.html">お問い合わせ</a></li>
+        <li><a href="contact_us.html">お問い合わせ</a></li>
       </ul>
     </nav>
 
@@ -291,10 +291,10 @@
     <div id="hamburger-nav">
       <button class="hamburger" aria-expanded="false">&#9776;</button>
       <nav id="mobile-menu" class="mobile-menu hidden">
-        <a href="../overview.html">会社概要</a>
-        <a href="../business_content.html">事業内容</a>
+        <a href="overview.html">会社概要</a>
+        <a href="business_content.html">事業内容</a>
         <a href="message_from_ceo.html">代表挨拶</a>
-        <a href="../contact_us.html">お問い合わせ</a>
+        <a href="contact_us.html">お問い合わせ</a>
       </nav>
     </div>
   </header>
@@ -305,7 +305,7 @@
     <div class="container">
       <div class="ceo-photo">
         <div class="photo-container">
-          <img src="../assets/ceo.jpg" alt="CEO" />
+          <img src="assets/ceo.jpg" alt="CEO" />
           <div class="ceo-name">代表取締役<br>ネウパネ ビスヌ</div>
         </div>
       </div>
