--- a/contact_us.html
+++ b/contact_us.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>代表挨拶 - Hayai Sewa</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="style.css" />
   <style>
     /* Unfix the header for this page only */
     header {
@@ -96,19 +96,19 @@
 <body>
   <header>
     <div class="left-side">
-      <a href="../index.html" aria-label="ホームへ戻る">
-        <img src="../assets/logo.jpg" alt="Logo" class="logo" />
-        <img src="../assets/logo1.jpg" alt="Logo Text" class="logo-text" />
+      <a href="index.html" aria-label="ホームへ戻る">
+        <img src="assets/logo.jpg" alt="Logo" class="logo" />
+        <img src="assets/logo1.jpg" alt="Logo Text" class="logo-text" />
       </a>
     </div>
 
     <!-- Desktop Navigation -->
     <nav id="desktop-nav">
       <ul>
-        <li><a href="../overview.html">会社概要</a></li>
-        <li><a href="../business_content.html">事業内容</a></li>
+        <li><a href="overview.html">会社概要</a></li>
+        <li><a href="business_content.html">事業内容</a></li>
         <li><a href="message_from_ceo.html">代表挨拶</a></li>
-        <li><a href="../contact_us.html">お問い合わせ</a></li>
+        <li><a href="contact_us.html">お問い合わせ</a></li>
       </ul>
     </nav>
 
@@ -116,10 +116,10 @@
     <div id="hamburger-nav">
       <button class="hamburger" aria-expanded="false">&#9776;</button>
       <nav id="mobile-menu" class="mobile-menu hidden">
-        <a href="../overview.html">会社概要</a>
-        <a href="../business_content.html">事業内容</a>
+        <a href="overview.html">会社概要</a>
+        <a href="business_content.html">事業内容</a>
         <a href="message_from_ceo.html">代表挨拶</a>
-        <a href="../contact_us.html">お問い合わせ</a>
+        <a href="contact_us.html">お問い合わせ</a>
       </nav>
     </div>
   </header>
@@ -171,6 +171,6 @@
     </section>
   </main>
 
-  <script src="../script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
