--- a/message_from_Ceo.html
+++ b/message_from_Ceo.html
@@ -271,9 +271,9 @@
 <body>
   <header>
     <div class="left-side">
-      <a href="../index.html" aria-label="ホームへ戻る">
-        <img src="../assets/logo.jpg" alt="Logo" class="logo" />
-        <img src="../assets/logo1.jpg" alt="Logo Text" class="logo-text" />
+      <a href="index.html" aria-label="ホームへ戻る">
+        <img src="assets/logo.jpg" alt="Logo" class="logo" />
+        <img src="assets/logo1.jpg" alt="Logo Text" class="logo-text" />
       </a>
     </div>
 
