--- a/contact_us.html
+++ b/contact_us.html
@@ -107,7 +107,7 @@
       <ul>
         <li><a href="overview.html">会社概要</a></li>
         <li><a href="business_content.html">事業内容</a></li>
-        <li><a href="message_from_ceo.html">代表挨拶</a></li>
+        <li><a href="message_from_Ceo.html">代表挨拶</a></li>
         <li><a href="contact_us.html">お問い合わせ</a></li>
       </ul>
     </nav>
