--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hayai Sewa</title>
+<link rel="icon" href="assets/favicon.png" type="image/png">
+
   <style>
     * {
       margin: 0;
