--- a/message_from_Ceo.html
+++ b/message_from_Ceo.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>代表挨拶 - Hayai Sewa</title>
+<link rel="icon" href="assets/favicon.png" type="image/png">
+
   <style>
     /* Unfix the header for this page only */
     header {
