--- a/overview.html
+++ b/overview.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hayai Sewa</title>
   <link rel="stylesheet" href="style.css" />
+<link rel="icon" href="assets/favicon.png" type="image/png">
+
 </head>
 <body>
   <!-- ⬇️ First block: HEADER + MOBILE MENU -->
