--- a/contact_us.html
+++ b/contact_us.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>代表挨拶 - Hayai Sewa</title>
   <link rel="stylesheet" href="style.css" />
+<link rel="icon" href="assets/favicon.png" type="image/png">
+
   <style>
     /* Unfix the header for this page only */
     header {
