--- a/message_from_Ceo.html
+++ b/message_from_Ceo.html
@@ -295,7 +295,7 @@
       <nav id="mobile-menu" class="mobile-menu hidden">
         <a href="overview.html">会社概要</a>
         <a href="business_content.html">事業内容</a>
-        <a href="message_from_ceo.html">代表挨拶</a>
+        <a href="message_from_Ceo.html">代表挨拶</a>
         <a href="contact_us.html">お問い合わせ</a>
       </nav>
     </div>
